k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agami-captcha-ingress
  namespace: agami
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: agami-captcha.cloud
      http:
        paths:
          - path: /widget
            pathType: Prefix
            backend:
              service:
                name: captcha-api
                port:
                  number: 80
          - path: /captcha
            pathType: Prefix
            backend:
              service:
                name: captcha-api
                port:
                  number: 80
          - path: /static/captcha_images
            pathType: Prefix
            backend:
              service:
                name: captcha-api
                port:
                  number: 80
  tls:
    - hosts:
        - agami-captcha.cloud
      secretName: agami-web-tls
